src/modules/menu/components/profile-menu/styles/themes/_submenu.scss
.wlc-profile-menu.wlc-profile-menu--type-submenu:host {

    .wlc-profile-menu__content {
        position: relative;

        ::-webkit-scrollbar {
            display: none;
        }
    }

    .wlc-menu--theme-default.wlc-menu--type-profile-first-menu,
    .wlc-menu--theme-default.wlc-menu--type-profile-menu {
        @include bm.get-mq-map('margin', $submenuProfileDefault, 'submenuMargin');
        display: grid;
        overflow: auto hidden;

        -ms-overflow-style: none;
        scrollbar-width: none;
        grid: {
            auto-columns: max-content;
            auto-flow: column;

            gap: ef.get-value($submenuProfileDefault, 'menuGap');
        }

        &:before {

            content: '';
            position: absolute;
            bottom: 0;
            left: 0;

            width: 100%;
            height: ef.get-value($submenuProfileDefault, 'submenuBorderBottomHeight');

            background: ef.get-value($submenuProfileDefault, 'submenuBorderBottom');
        }

        ::ng-deep {

            .wlc-menu {

                &__item:last-child {

                    .wlc-menu__link {

                        @include bm.hover {

                            &:before {
                                width: 100%;
                            }
                        }
                    }
                }

                &__link {
                    @include text.get-text-style(ef.get-value($submenuProfileDefault, 'submenuItemTextStyle'), var(--mc-baseMain));
                    @include bm.get-mq-map('padding', $submenuProfileDefault, 'submenuItemPadding');
                    @include bm.transition(color);

                    position: relative;
                    z-index: 2;

                    display: flex;

                    text-decoration: none;

                    &:before {
                        @include bm.transition(width);

                        content: '';
                        position: absolute;
                        bottom: 0;
                        left: 0;

                        width: 0;
                        height: ef.get-value($submenuProfileDefault, 'linkBeforeHeight');

                        background: ef.get-value($submenuProfileDefault, 'submenuItemActiveBorder');
                    }

                    &.active {
                        @include text.get-text-style(ef.get-value($submenuProfileDefault, 'submenuItemTextStyleActive'), var(--mc-baseMain));

                        &:before {
                            width: 100%;
                        }
                    }

                    @include bm.hover {

                        &:before {
                            width: ef.get-value($submenuProfileDefault, 'submenuItemHoverUnderlineWidth');
                        }
                    }

                    @include bm.hover {

                        &:before {
                            width: 100%;
                        }
                    }
                }
            }
        }

        .wlc-sections__profile-content--theme-first & {
            margin: 0;
        }
    }

    .wlc-menu--theme-default.wlc-menu--type-profile-menu::-webkit-scrollbar {
        display: none;
    }
}

